# discord-booklets

./: .gitignore  README.md  books.json  discord-booklets.cabal  stack.yaml
src/: Books.hs  Commands.hs  Dispatch.hs  Main.hs  Util.hs
