name:                discord-booklets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sarahkittyy/discord-booklets#readme
license:             MIT
license-file:        LICENSE
author:              Sarah Ohlin
maintainer:          sarahohlin1@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable discord-booklets
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  other-modules:       Dispatch
                     , Util
                     , Books
                     , Commands
  build-depends:       base >= 4.7 && < 5
                     , text
                     , discord-haskell
                     , containers
                     , aeson
                     , bytestring
                     , split
